// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render trucking aux fee 1`] = `
<div
  className="container flex-100 layout-row layout-wrap layout-align-center-center"
>
  <div
    className="header flex-100 layout-row layout-align-center-center"
  >
    <h4
      className="flex-none"
    >
      rates:pricingBreakdownFor
    </h4>
  </div>
  <div
    className="table_section flex-100 layout-row layout-wrap"
  >
    <p
      className="table_section_title flex-100"
    >
      rates:originalRate
    </p>
    <Fees
      data={Object {}}
      t={[Function]}
    />
  </div>
  <div
    className="table_section flex-100 layout-row layout-wrap"
  >
    <p
      className="table_section_title flex-100"
    >
      rates:margins
    </p>
    <p
      className="no_margins flex-100"
    >
      rates:noMargins
    </p>
  </div>
</div>
`;

exports[`shallow render trucking main fee 1`] = `
<div
  className="container flex-100 layout-row layout-wrap layout-align-center-center"
>
  <div
    className="header flex-100 layout-row layout-align-center-center"
  >
    <h4
      className="flex-none"
    >
      rates:pricingBreakdownFor
    </h4>
  </div>
  <div
    className="table_section flex-100 layout-row layout-wrap"
  >
    <p
      className="table_section_title flex-100"
    >
      rates:originalRate
    </p>
    <TruckingFees
      data={Object {}}
      t={[Function]}
    />
  </div>
  <div
    className="table_section flex-100 layout-row layout-wrap"
  >
    <p
      className="table_section_title flex-100"
    >
      rates:margins
    </p>
    <p
      className="no_margins flex-100"
    >
      rates:noMargins
    </p>
  </div>
</div>
`;
